# allofplos

./: .gitignore  .travis.yaml  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  HISTORY.txt  LICENSE  PKG-INFO  Pipfile  README.md  README.rst  contributing.rst  fetch_test.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
allofplos/: .gitignore  Corpus Analysis basics.ipynb  Corpus_Analysis_Examples.ipynb  Corpus_QA-Copy1.ipynb  Corpus_QA.ipynb  PLOS Medicine Colleen and NLP.ipynb  PLOS Medicine and NLP.ipynb  Production team investigates.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  __init__.py  allofplos_basics.ipynb  article.py  article_class.ipynb  article_class.py  article_elements.py  citation_utilities.py  config.yaml  corpus_class.py  corpus_helpers.py  csvfile.ipynb  dbtoorm.py  dois.txt  file_rename.py  gdrive.py  jupyter_nbconvert_config.py  makedb.py  plos_corpus.py  plos_corpus.sublime-workspace  plos_pmc.py  plos_regex.py  plospmc.py  seed_data.py  starter.db  transformations.py  update.py  utils.py
allofplos/async_utils/: fetch_test.py
allofplos/corpus/: __init__.py  corpus.py  corpus_class.py  gdrive.py  plos_corpus.py
allofplos/elements/: __init__.py  article_elements.py  journal.py  license.py
allofplos/jupyternb/: Corpus_Analysis-old.ipynb  Download PLOS article XML from journals.plos.org.ipynb  Monthly integrity check for PLOS corpus.ipynb
allofplos/samples/: corpus_analysis.py
allofplos/seed_corpus/: journal.pbio.0020334.xml  journal.pbio.0030408.xml  journal.pbio.1000359.xml  journal.pbio.1001315.xml  journal.pcbi.1000204.xml  journal.pcbi.1001083.xml  journal.pcbi.1002484.xml  journal.pcbi.1004113.xml  journal.pgen.1000052.xml  journal.pmed.0020007.xml  journal.pmed.0030132.xml  journal.pmed.0030205.xml  journal.pmed.0030445.xml  journal.pmed.0040303.xml  journal.pmed.1000431.xml  journal.pmed.1001786.xml  journal.pone.0008519.xml  journal.pone.0008915.xml  journal.pone.0010685.xml  journal.pone.0036880.xml  journal.pone.0040259.xml  journal.pone.0052690.xml  journal.pone.0055490.xml  journal.pone.0058242.xml  journal.pone.0068090.xml  journal.pone.0080518.xml  journal.pone.0081648.xml  journal.pone.0087236.xml  journal.pone.0108198.xml  journal.pone.0111971.xml  journal.pone.0117688.xml  journal.pone.0119074.xml  journal.pone.0120049.xml  journal.pone.0126470.xml  journal.pone.0138823.xml  journal.pone.0146913.xml  journal.pone.0147124.xml  journal.pone.0152459.xml  journal.ppat.1002769.xml
allofplos/starter_corpus/: journal.pbio.0020188.xml  journal.pbio.0040088.xml  (+81 more)
docs/: allofplos update explainer.md  quickstart.rst
paper/: paper.md  ref.bib
tests/: test_corpus.py  test_unittests.py
(+13 files in other folders)
