[tool.poetry]
name = "allofplos"
version = "0.12.0"
description = "Get and analyze all PLOS articles"
authors = [
  "Elizabeth Seiver <eseiver@plos.org>",
  "Sebastian Bassi <sebastian.bassi@globant.com>",
  "M Pacer <mpacer@berkeley.edu>"
]
license = "MIT"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
]
keywords = ["science", "PLOS", "publishing"]

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.7.1"
requests = "^2.26.0"
tqdm = "^4.62.3"
peewee = "^3.14.8"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
