[project]
name = "allofplos"
version = "1.1.1"
description = "Get and analyze all PLOS articles"
authors = [
  {name="Elizabeth Seiver", email="eseiver@plos.org"},
  {name="Sebastian Bassi", email="sebastian@toyoko.io"},
  {name="M Pacer", email="mpacer@berkeley.edu"}
]
maintainers = [
  {name="Erik Hetzner", email="ehetzner@plos.org"},
  {name="Kevin Brandt", email="kbrandt@plos.org"}
]
readme = "README.rst"
license = {file="LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
]
keywords = ["science", "PLOS", "publishing", "PLoS"]
dependencies = [
  "certifi",
  "chardet",
  "charset-normalizer",
  "idna",
  "lxml",
  "peewee",
  "pqdm",
  "python-utils",
  "requests",
  "six",
  "tqdm",
  "unidecode",
  "urllib3"
]
